Added a page for Jello

--- a/stringray.xhtml
+++ b/stringray.xhtml
@@ -22,11 +22,15 @@
         <h2>Bringing back the glory days of <a href="http://wizards.com/dnd/" title='Tabletop roleplaying game'>Dungeons &amp; Dragons</a></h2>
       </li>
       <li>
+        <h1><a href='jello.xhtml'>Jello</a></h1>
+        <h2>Mac OS X pasteboard watcher and copy/paste manager</h2>
+      </li>
+      <li>
         <h1><a href='rat.xhtml'>rat</a></h1>
         <h2><a href="http://irssi.org/" title='Advanced command-line IRC client'>irssi</a>, for any messaging system, and scriptable in ruby</h2>
       </li>
       <li>
-        <h1><a href='nfoiled.xhtml'>Nfoiled</a></h1>
+        <h1><a href='nfoiledw.xhtml'>Nfoiled</a></h1>
         <h2>The Rubyist's interface to <a href="http://www.gnu.org/software/ncurses/" title='GNU terminal control library'>Ncurses</a></h2>
       </li>
       <li class='active'>
