Fixed a minor typo

--- a/stringray.xhtml
+++ b/stringray.xhtml
@@ -30,7 +30,7 @@
         <h2><a href="http://irssi.org/" title='Advanced command-line IRC client'>irssi</a>, for any messaging system, and scriptable in ruby</h2>
       </li>
       <li>
-        <h1><a href='nfoiledw.xhtml'>Nfoiled</a></h1>
+        <h1><a href='nfoiled.xhtml'>Nfoiled</a></h1>
         <h2>The Rubyist's interface to <a href="http://www.gnu.org/software/ncurses/" title='GNU terminal control library'>Ncurses</a></h2>
       </li>
       <li class='active'>
