Added a page for attr_splat

--- a/stringray.xhtml
+++ b/stringray.xhtml
@@ -33,6 +33,11 @@
         <h1><a href='nfoiled.xhtml'>Nfoiled</a></h1>
         <h2>The Rubyist's interface to <a href="http://www.gnu.org/software/ncurses/" title='GNU terminal control library'>Ncurses</a></h2>
       </li>
+      <li>
+        <h1><a href='attr_splat.xhtml'><tt>attr_*</tt></a></h1>
+        <h2><tt>attr_accessor</tt>, <tt>attr_reader</tt>, and
+          <tt>attr_reader</tt> on steroids</h2>
+      </li>
       <li class='active'>
         <h1><a href='stringray.xhtml'>StringRay</a></h1>
         <h2><tt>String += Enumerable</tt></h2>
