--- a/nfoiled.xhtml
+++ b/nfoiled.xhtml
@@ -59,6 +59,11 @@
         </ul>
       </li>
       <li>
+        <h1><a href='attr_splat.xhtml'><tt>attr_*</tt></a></h1>
+        <h2><tt>attr_accessor</tt>, <tt>attr_reader</tt>, and
+          <tt>attr_reader</tt> on steroids</h2>
+      </li>
+      <li>
         <h1><a href='stringray.xhtml'>StringRay</a></h1>
         <h2><tt>String += Enumerable</tt></h2>
       </li>
