--- a/rat.xhtml
+++ b/rat.xhtml
@@ -53,6 +53,11 @@
         <h2>The Rubyist's interface to <a href="http://www.gnu.org/software/ncurses/" title='GNU terminal control library'>Ncurses</a></h2>
       </li>
       <li>
+        <h1><a href='attr_splat.xhtml'><tt>attr_*</tt></a></h1>
+        <h2><tt>attr_accessor</tt>, <tt>attr_reader</tt>, and
+          <tt>attr_reader</tt> on steroids</h2>
+      </li>
+      <li>
         <h1><a href='stringray.xhtml'>StringRay</a></h1>
         <h2><tt>String += Enumerable</tt></h2>
       </li>
