--- a/attr_splat.xhtml
+++ b/attr_splat.xhtml
@@ -36,7 +36,7 @@
       <li class='active'>
         <h1><a href='attr_splat.xhtml'><tt>attr_*</tt></a></h1>
         <h2><tt>attr_accessor</tt>, <tt>attr_reader</tt>, and
-          <tt>attr_reader</tt> on steroids</h2>
+          <tt>attr_writer</tt> on steroids</h2>
         
         <p>
           <tt>attr_*</tt> is a library to extend the basic Ruby class/module attribute
