--- a/rat.xhtml
+++ b/rat.xhtml
@@ -7,8 +7,12 @@
     <link rel='copyright' href='http://creativecommons.org/licenses/by-nc-sa/3.0/' type='text/html;charset=utf-8'/>
     <meta name='microid' content='mailto+http:sha1:a4d389258ae0a612dfc561405f77ee31447e2dd1'/>
     
-    <link rel='stylesheet' href='http://design.elliottcable.name/960/reset.css' type='text/css;charset=utf-8'/>
-    <link rel='stylesheet' href='http://design.elliottcable.name/960/text.css' type='text/css;charset=utf-8'/>
+    <link rel="stylesheet"
+      href="http://resources.yreality.net/Design/960/reset.css"
+      type="text/css;charset=utf-8"/> 
+    <link rel="stylesheet"
+      href="http://resources.yreality.net/Design/960/text.css"
+      type="text/css;charset=utf-8"/>
     <link rel='stylesheet' href='main.css' type='text/css;charset=utf-8'/>
   </head>
   <body>
